# cosmicding

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  justfile
.github/workflows/: build.yml  lint.yml
i18n/cs/: cosmicding.ftl
i18n/en/: cosmicding.ftl
i18n/sv/: cosmicding.ftl
migrations/: 20241009020027_UserAccounts.sql  20241012021027_Bookmarks.sql  20241025005828_UserAccounts_Sharing.sql  20250301214058_Shared_Bookmarks_Workaround.sql  20250317191238_FaviconCache.sql  20250411190150_UserAccounts_Disable.sql  20251114222154_Add_Provider_Support.sql
res/flatpak/: cargo-sources.json  com.vkhitrin.cosmicding  com.vkhitrin.cosmicding.metainfo.xml  com.vkhitrin.cosmicding.yaml
res/linux/: app.desktop
res/macOS/Cosmicding.app/Contents/: Info.plist
res/macOS/Cosmicding.app/Contents/Resources/: AppIcon.icns  Assets.car
res/macOS/cosmicding.app/Contents/: Info.plist
res/macOS/cosmicding.app/Contents/Resources/: AppIcon.icns  cosmicding.icns
src/: app.rs  config.rs  i18n.rs  key_binds.rs  main.rs  menu.rs  nav.rs  rec_icon.rs  style.rs
src/app/: actions.rs  config.rs  context.rs  dialog.rs  icons.rs  key_bind.rs  menu.rs  nav.rs
src/core/: i18n.rs  mod.rs  settings.rs
src/db/: mod.rs
src/http/: mod.rs
src/models/: account.rs  bookmarks.rs  db_cursor.rs  favicon_cache.rs  mod.rs  operation.rs  provider.rs  sync_status.rs
src/pages/: accounts.rs  bookmarks.rs  mod.rs
src/provider/: cosmicding.rs  linkding.rs  mod.rs
src/style/: button.rs  mod.rs  text_editor.rs
src/style/animation/: mod.rs  refresh.rs
src/utils/: icons.rs  json.rs  mod.rs
src/utils/bookmark_parser/: mod.rs  netscape.rs
src/widgets/: mod.rs  progress_info.rs
