[package]
name = "cosmicding"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
chrono = "0.4.38"
constcat = "0.5.1"
directories = "5.0.1"
futures = "0.3.31"
futures-util = "0.3.30"
i18n-embed-fl = "0.9.1"
include_dir = "0.7.4"
log = "0.4.22"
once_cell = "1.19.0"
open = "5.3.0"
paste = "1.0.15"
reqwest = { version = "0.12.8", features = ["json"] }
rust-embed = "8.5.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }
